--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://ka-f.fontawesome.com/">
-    <title>Bretagne Web Solutions</title>
+    <title>Armor Web Creations</title>
     <script src="https://kit.fontawesome.com/aa04c98466.js" crossorigin="anonymous"></script>
   </head>
   <body>
