cookies consent, form, google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+        <!-- Google Tag Manager -->
+    <script>
+      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-K2D59TZV');
+    </script>
+      <!-- End Google Tag Manager -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/icon-screens.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,7 +21,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://ka-f.fontawesome.com/">
-    <title>Armor Web Creations - Développeur Web Freelance à Guingamp, Bretagne, France - Création de Sites Web</title>
+    <title>Armor Web Creations - Développeur Web Freelance à Guingamp, Bretagne, France - Création de Sites Web sur mesure</title>
     <script src="https://kit.fontawesome.com/aa04c98466.js" crossorigin="anonymous"></script>
 
     <!-- JSON-LD LocalBusiness Schema.org -->
@@ -78,6 +87,13 @@
     </script>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K2D59TZV"
+        height="0" width="0" style="display:none;visibility:hidden">
+      </iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div id="root"></div>
   </body>
 </html>
