ajout captcha sur form avis

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
     <link rel="preconnect" href="https://ka-f.fontawesome.com/">
     <title>Armor Web Creations - Développeur Web Freelance à Guingamp, Bretagne, France - Création de Sites Web sur mesure</title>
     <script src="https://kit.fontawesome.com/aa04c98466.js" crossorigin="anonymous"></script>
+    <!--Script-captacha-->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
     <!-- JSON-LD LocalBusiness Schema.org -->
     <script type="application/ld+json">
