--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-        <!-- Google Tag Manager -->
-    <script>
-      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-K2D59TZV');
-    </script>
-      <!-- End Google Tag Manager -->
+    <!-- Meta Tags -->
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/icon-screens.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Armor Web Creations, entreprise de développeur web freelance à Guingamp, Bretagne, France. Spécialiste en création de sites web sur mesure pour les entreprises locales. Contactez-moi pour un devis gratuit." />
     <meta name="color-scheme" content="#000000" />
-    <meta
-      name="description"
-      content="Armor Web Creations, entreprise de développeur web freelance à Guingamp, Bretagne, France. Spécialiste en création de sites web sur mesure pour les entreprises locales. Contactez-moi pour un devis gratuit."
-    />
+
+    <!-- Title and Favicon -->
+    <title>Armor Web Creations - Développeur Web Freelance à Guingamp, Bretagne, France - Création de Sites Web sur mesure</title>
+    <link rel="icon" href="%PUBLIC_URL%/icon-screens.png" />
+
+    <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="preconnect" href="https://ka-f.fontawesome.com/">
-    <title>Armor Web Creations - Développeur Web Freelance à Guingamp, Bretagne, France - Création de Sites Web sur mesure</title>
+
+    <!-- Font Awesome -->
+    <link rel="preconnect" href="https://ka-f.fontawesome.com/" />
     <script src="https://kit.fontawesome.com/aa04c98466.js" crossorigin="anonymous"></script>
-    <!--Script-captacha-->
+
+    <!-- Google reCAPTCHA -->
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
-    <!-- JSON-LD LocalBusiness Schema.org -->
+    <!-- JSON-LD Schema.org for Local Business -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -50,36 +46,11 @@
           "longitude": -3.0433
         },
         "openingHoursSpecification": [
-          {
-            "@type": "OpeningHoursSpecification",
-            "dayOfWeek": "Monday",
-            "opens": "08:30",
-            "closes": "18:00"
-          },
-          {
-            "@type": "OpeningHoursSpecification",
-            "dayOfWeek": "Tuesday",
-            "opens": "08:30",
-            "closes": "18:00"
-          },
-          {
-            "@type": "OpeningHoursSpecification",
-            "dayOfWeek": "Wednesday",
-            "opens": "08:30",
-            "closes": "18:00"
-          },
-          {
-            "@type": "OpeningHoursSpecification",
-            "dayOfWeek": "Thursday",
-            "opens": "08:30",
-            "closes": "18:00"
-          },
-          {
-            "@type": "OpeningHoursSpecification",
-            "dayOfWeek": "Friday",
-            "opens": "08:30",
-            "closes": "18:00"
-          }
+          { "@type": "OpeningHoursSpecification", "dayOfWeek": "Monday", "opens": "08:30", "closes": "18:00" },
+          { "@type": "OpeningHoursSpecification", "dayOfWeek": "Tuesday", "opens": "08:30", "closes": "18:00" },
+          { "@type": "OpeningHoursSpecification", "dayOfWeek": "Wednesday", "opens": "08:30", "closes": "18:00" },
+          { "@type": "OpeningHoursSpecification", "dayOfWeek": "Thursday", "opens": "08:30", "closes": "18:00" },
+          { "@type": "OpeningHoursSpecification", "dayOfWeek": "Friday", "opens": "08:30", "closes": "18:00" }
         ],
         "sameAs": [
           "https://www.linkedin.com/in/ludmilla-marti-345313255/",
@@ -87,15 +58,34 @@
         ]
       }
     </script>
+    <!-- Google Tag Manager -->
+    <script>
+      (function(w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s),
+            dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, 'script', 'dataLayer', 'GTM-K2D59TZV');
+    </script>
+    <!-- End Google Tag Manager -->
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
     <noscript>
-      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K2D59TZV"
-        height="0" width="0" style="display:none;visibility:hidden">
-      </iframe>
+      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K2D59TZV" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+    <!-- React Root -->
     <div id="root"></div>
+
+    <!-- Additional JS Scripts (Optional) -->
+    <script>
+      console.log("Scripts supplémentaires ou autres configurations si nécessaire.");
+    </script>
   </body>
 </html>
