--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,41 @@
     <!-- Meta Tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Armor Web Creations, entreprise de développeur web freelance à Guingamp, Bretagne, France. Spécialiste en création de sites web sur mesure pour les entreprises locales. Contactez-moi pour un devis gratuit." />
-    <meta name="color-scheme" content="#000000" />
-
-    <!-- Title and Favicon -->
-    <title>Armor Web Creations - Développeur Web Freelance à Guingamp, Bretagne, France - Création de Sites Web sur mesure</title>
     <link rel="icon" href="%PUBLIC_URL%/icon-screens.png" />
-
-    <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <link rel="canonical" href="https://armor-web-creations.vercel.app" />
+
+    <title>Concepteur sites web à Guingamp | Sites internet sur mesure en Côtes d'Armor 22 | Développeur web freelance en Bretagne | Armor Web Creations</title>
+    <meta name="description" content="Armor Web Creations, concepteur sites web à Guingamp, Côtes d'Armor(22), 
+    spécialiste en création de sites internet sur mesure en Bretagne. Entreprises, clubs, agences, 
+    associations locales. Devis gratuit." />
+    <meta name="keywords" content="développeur web, développeur logiciel, concepteur sites web, création de sites internet, 
+    Guingamp, Lannion, Saint-Brieuc, Loudéac, Rennes, Brest, Côtes d'Armor 22, Bretagne, France, services web, sites internet sur mesure, 
+    offres de création de site, promotions, développement personnalisé, sites vitrines, optimisation SEO, responsive design, 
+    application mobile, API, services numériques, services du digital, projets personnels, projets professionnels, HTML, CSS, 
+    JavaScript, React, SASS, frameworks modernes, développement front-end, développement back-end, intégration web, 
+    maintenance de sites web, audit SEO, création de contenu, e-commerce, sites portfolio, développement d'applications web, 
+    hébergement web, site web statique, site web dynalique, créateur sites internet, codeur, encodeur, réferencement local, 
+    projets de transformation digitale, refonte de site internet, sites de commerce électronique, applications web sur mesure,
+    projets de branding digital, solutions de marketing digital, sous-traitance développement web, partenaire digital, agence digitale, 
+    collaboration projet web, freelance pour agence, meilleur développeur web à Guingamp, développeur web freelance en Bretagne, web design, visiblité internet" />
+    <meta name="color-scheme" content="#000000" />
+
+    <!--Open Graph tags for Social Media sharing-->
+    <meta property="og:title" content="Armor Web Creations" />
+    <meta property="og:description" content="Armor Web Créations, votre expert en création ou refonte de sites web en Bretagne. Nous offrons des solutions sur mesure pour vos projets personnels et professionnels, avec des offres et promotions attractives." />
+    <meta property="og:image" content="https://armor-web-creations.vercel.app/assets/images/Homepage.png" />
+    <meta property="og:url" content="https://armor-web-creations.vercel.app" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Armor Web Creations" />
+    
+    <!--Twitter Card tags for sharing on Twitter-->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Armor Web Creations" />
+    <meta name="twitter:description" content="Armor Web Créations, votre expert en création ou refonte de sites web en Bretagne. Nous offrons des solutions sur mesure pour vos projets personnels et professionnels." />
+    <meta name="twitter:image" content="https://armor-web-creations.vercel.app/assets/images/Homepage.png" />
 
     <!-- Font Awesome -->
     <link rel="preconnect" href="https://ka-f.fontawesome.com/" />
@@ -31,14 +56,15 @@
         "image": "https://github.com/MillaDu22/ldla-mti-web-developer/blob/main/src/assets/images/britain-logo.webp",
         "@id": "https://armor-web-creations.vercel.app/#business",
         "url": "https://armor-web-creations.vercel.app",
-        "telephone": "+33-658062800",
+        "telephone": "+33-764006531",
         "priceRange": "Sur-mesure",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "14 rue Feunten Ar C'hlan",
           "addressLocality": "Plesidy",
           "postalCode": "22720",
-          "addressCountry": "FR"
+          "addressRegion": "Côtes-d'Armor, Bretagne",
+          "addressCountry": "France"
         },
         "geo": {
           "@type": "GeoCoordinates",
@@ -54,7 +80,7 @@
         ],
         "sameAs": [
           "https://www.linkedin.com/in/ludmilla-marti-345313255/",
-          "https://www.facebook.com/profile.php?id=61565375723366"
+          "https://www.facebook.com/armorwebcreations/"
         ]
       }
     </script>
