url absolue og:image

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <!--Open Graph tags for Social Media sharing-->
     <meta property="og:title" content="Armor Web Creations" />
     <meta property="og:description" content="Armor Web Créations, votre expert en création ou refonte de sites web en Bretagne. Nous offrons des solutions sur mesure pour vos projets personnels et professionnels, avec des offres et promotions attractives." />
-    <meta property="og:image" content="/homepage.png" />
+    <meta property="og:image" content="https://armor-web-creations.vercel.app/homepage.png" />
     <meta property="og:url" content="https://armor-web-creations.vercel.app" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Armor Web Creations" />
