ajout id page facebook

--- a/public/index.html
+++ b/public/index.html
@@ -33,12 +33,13 @@
     <meta property="og:url" content="https://armor-web-creations.vercel.app" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Armor Web Creations" />
+    <meta property="fb:app_id" content="361249267080709" />
     
     <!--Twitter Card tags for sharing on Twitter-->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Armor Web Creations" />
     <meta name="twitter:description" content="Armor Web Créations, votre expert en création ou refonte de sites web en Bretagne. Nous offrons des solutions sur mesure pour vos projets personnels et professionnels." />
-    <meta name="twitter:image" content="https://armor-web-creations.vercel.app/assets/images/Homepage.png" />
+    <meta name="twitter:image" content="https://armor-web-creations.vercel.app/homepage.png" />
 
     <!-- Font Awesome -->
     <link rel="preconnect" href="https://ka-f.fontawesome.com/" />
