ajout logos et article 17

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     spécialisé dans la création de sites internet.
     Demandez votre devis gratuit pour entreprises, clubs et associations." />
     <link rel="canonical" href="https://armor-web-creations.vercel.app" />
-    <link rel="icon" href="%PUBLIC_URL%/icon-screens.png" />
+    <link rel="icon" href="%PUBLIC_URL%/icon-ico.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="color-scheme" content="#000000" />
